<resources>
    <string name="app_name">Bond Counter</string>
    <string name="year_profit">Годовая доходность</string>
    <string name="nkd">НКД</string>
    <string name="commission">Комиссия за сделку (%)</string>
    <string name="commission_acc_mng">Комиссия за ведение счета</string>
    <string name="date_repayment">Срок погашения</string>
    <string name="coupon_size">Размер купона</string>
    <string name="start_value">Стартовая цена</string>
    <string name="count">Рассчитать</string>
    <string name="nominal">Номинал</string>
    <string name="coupon_frequency">Частота выплаты купона (раз в дней)</string>
    <string name="coefficient">Количество бумаг</string>
    <string name="profit">С покупки облигации Вы заработаете:</string>
    <string name="fail">С покупки облигации Вы потеряете:</string>
    <string name="exception">Вероятно, заполнены не все поля</string>
</resources>